# SSE-UI_demo

./: .gitignore  CMakeLists.txt  README.md  clientMain.cpp  clientMain.h  clientMain.ui  dbConnection.cpp  dbConnection.h  dbConnection.ui  initWindow.cpp  initWindow.h  initWindow.ui  initwindow.cpp  initwindow.h  main.cpp  msgSocket.cpp  msgSocket.h  msgsocket.cpp  msgsocket.h  myMsg.cpp  myMsg.h  myQMsgBox.cpp  myQMsgBox.h  mymsg.cpp  mymsg.h  socketClient.cpp  socketClient.h  socketClient.ui  socketServer.cpp  socketServer.h  socket_Client.cpp  socket_Client.h  socket_Client.ui  utils.cpp  utils.h  waittingDialog.cpp  waittingDialog.h  waittingDialog.ui
config/: config.ini
